# gstq_etl

./: .gitignore  README.md  design_geocoder.ipynb  geocode_gstq.py  load_gstq_2023.py  load_gstq_2024.py  load_gstq_2025.py  logging_config.json  main.py  metadata.toml  pyproject.toml  requirements.txt  var_meta_fill.py
etl/: extract.py  geocode.py  load.py  process_gstq.py  transform.py
etl/conf/: field_reference_2014.json  field_reference_2016.json  field_reference_2018.json  field_reference_2021.json  field_reference_2022.json  field_reference_2023.json  field_reference_2024.json  field_reference_2025.json  field_reference_2025_2.json  sources.csv
great_start_to_quality/: __init__.py  reference.py  schema.py
