[project]
name = "gstq-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geoalchemy2>=0.18.0",
    "geopandas>=1.1.1",
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "pygris>=0.2.0",
    "sqlalchemy>=2.0.41",
]
